--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -188,7 +188,7 @@
     "PkFinKO": "Error en la fila {{FilaKO}}: Error en el Pk Final.",
     "AnyoCampanyaKO": "Error en llegir l'any de la campanya.",
     "RegionKO": "Error en la fila {{FilaKO}}: Error en el Ámbito.",
-    "PDFOK": "El PDF se ha generado correctamente.",
+    "PDFOK": "El ZIP se ha generado correctamente.",
     "PDFKO0": "ERROR durant la generació del ZIP.",
     "PDFKO1": "ERROR BD TÍTOL, NO EXISTEIX CARRETERA.",
     "PDFKO2": "ERROR, ERROR ESBORRAR TMP.",
