--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -249,6 +249,7 @@
     "auscul":"Auscultacions",
     "DarAlta": "Donar de Alta",
     "ALTATRAMKO00": "ERROR AL DONAR D'ALTA UN TRAM. ERROR EN ACTUALITZAR",
+    "ALTATRAMOK": "El Tram se ha donat d'alta correctament.",
     "DELCARRILKO":"Error en intentar eliminar el carril",
     "DELCARRILOK":"El carril s'ha eliminat correctament",
     "SentDecre": "Sentit decreixent",
