--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -283,5 +283,6 @@
     "NumVias": "Nombre de Vies",
     "PKInicial": "Pk Inicial",
     "Analizar": "Analitzar",
-    "DATAKO": "Data d'alta invàlida"
+    "DATAKO": "Data d'alta invàlida",
+    "impGrafo": "Importar Graf/Trams"
 }
