--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -282,5 +282,6 @@
     "NumVias": "Número de Vías",
     "PKInicial": "Pk Inicial",
     "Analizar": "Analizar",
-    "DATAKO": "Fecha de alta inválida"
+    "DATAKO": "Fecha de alta inválida",
+    "impGrafo": "Importar Grafo/Tramos"
 }
