--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -284,5 +284,7 @@
     "PKInicial": "Pk Inicial",
     "Analizar": "Analitzar",
     "DATAKO": "Data d'alta invàlida",
-    "impGrafo": "Importar Graf/Trams"
+    "impGrafo": "Importar Graf/Trams",
+    "RodadaDer": "IRI Rodada Dreta",
+    "RodadaIzq": "IRI Rodada Esquerra"
 }
