--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -283,5 +283,7 @@
     "PKInicial": "Pk Inicial",
     "Analizar": "Analizar",
     "DATAKO": "Fecha de alta inválida",
-    "impGrafo": "Importar Grafo/Tramos"
+    "impGrafo": "Importar Grafo/Tramos",
+    "RodadaDer": "IRI Rodada Derecha",
+    "RodadaIzq": "IRI Rodada Izquierda"
 }
