Auscultaciones FIS, MVL, PAQ

--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -267,7 +267,7 @@
     "DeflMaxIntCorr": "Defl. Màx. Int. Corregida",
     "DeflMaxExtCorr": "Defl. Màx. Ext. Corregida",
     "Incidencia": "Incidència",
-    "TempPavimento": "Temperatura Paviment (ºC)",
+    "TempPavimento": "Temp. Paviment (ºC)",
     "RadiCurvMaxInt": "Radio Curv. Màx Eix Int.",
     "RadiCurvMaxExt": "Radio Curv. Màx Eix Ext.",
     "DeflMaxEjeInt": "Defl. Màx. No Corr. Eix Int.",  
@@ -286,5 +286,12 @@
     "DATAKO": "Data d'alta invàlida",
     "impGrafo": "Importar Graf/Trams",
     "RodadaDer": "IRI Rodada Dreta",
-    "RodadaIzq": "IRI Rodada Esquerra"
+    "RodadaIzq": "IRI Rodada Esquerra",
+    "Incidencias": "Incidències",
+    "CRT": "CRT",
+    "Textura": "Textura",
+    "MarcaViaria": "Marca Viària",
+    "ContrasteDia": "Contrasti Dia",
+    "ContrasteNoche": "Contrasti Nit",
+    "Retroflexion": "Retroflexión"
 }
