--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -266,7 +266,7 @@
     "DeflMaxIntCorr": "Defl. Máx. Interior Corregida",
     "DeflMaxExtCorr": "Defl. Máx. Exterior Corregida",
     "Incidencia": "Incidencia",
-    "TempPavimento": "Temperatura Pavimento (ºC)",
+    "TempPavimento": "Temp. Pavimento (ºC)",
     "RadiCurvMaxInt": "Radio Curv. Máx Eje Int.",
     "RadiCurvMaxExt": "Radio Curv. Máx Eje Ext.",
     "DeflMaxEjeInt": "Defl. Máx. No Corr. Eje Int.",  
@@ -285,5 +285,12 @@
     "DATAKO": "Fecha de alta inválida",
     "impGrafo": "Importar Grafo/Tramos",
     "RodadaDer": "IRI Rodada Derecha",
-    "RodadaIzq": "IRI Rodada Izquierda"
+    "RodadaIzq": "IRI Rodada Izquierda",
+    "Incidencias": "Incidencias",
+    "CRT": "CRT",
+    "Textura": "Textura",
+    "MarcaViaria": "Marca Viaria",
+    "ContrasteDia": "Contraste Dia",
+    "ContrasteNoche": "Contraste Noche",
+    "Retroflexion": "Retroflexión"
 }
