--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -293,5 +293,21 @@
     "MarcaViaria": "Marca Viària",
     "ContrasteDia": "Contrasti Dia",
     "ContrasteNoche": "Contrasti Nit",
-    "Retroflexion": "Retroflexión"
+    "Retroflexion": "Retroflexión",
+    "PCI": "PCI",
+    "IFT": "IFT",
+    "IFP": "IFP",
+    "PorcSupFisTot": "% Superfície Fisurada Total",
+    "LongFisLongit": "Longitud fissuració longitudinal (m)",
+    "PorcSupFisLongi": "Percentatge Superfície Fissuració Longitudinal",
+    "LongFisTrans": "Longitud Fisuración Transversal",
+    "PorcSupFisTrans": "% Fissuració Transversal", 
+    "AreaOtrasSupFis": "Àrea altres Superfícies de Fissuració (m2)",
+    "PorcOtrasSupFis": "% altres Superfícies de Fissuració (m2)",
+    "AreaSupCuart": "Àrea Superfície Quartejada",
+    "PorcSupCuart": "% Superfície Quartejada",
+    "Baches": "Sots (m2)",
+    "ProfRodIzq": "Prof. Rodada Esquerra",
+    "ProfRodDer": "Prof. Rodada Dreta",
+    "ProfRodMax": "Prof. Rodada Màxima"
 }
