--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -292,5 +292,21 @@
     "MarcaViaria": "Marca Viaria",
     "ContrasteDia": "Contraste Dia",
     "ContrasteNoche": "Contraste Noche",
-    "Retroflexion": "Retroflexión"
+    "Retroflexion": "Retroflexión",
+    "PCI": "PCI",
+    "IFT": "IFT",
+    "IFP": "IFP",
+    "PorcSupFisTot": "% Superficie Fisurada Total",
+    "LongFisLongit": "Longitud fisuración longitudinal (m)",
+    "PorcSupFisLongi": "Porcentaje Superficie Fisuración Longitudinal",
+    "LongFisTrans": "Longitud Fisuración Transversal",
+    "PorcSupFisTrans": "% Superficie fisuración Transversal", 
+    "AreaOtrasSupFis": "Área otras Superficies de Fisuración (m2)",
+    "PorcOtrasSupFis": "% otras Superficies de Fisuración (m2)",
+    "AreaSupCuart": "Area Superfície Quartejada",
+    "PorcSupCuart": "% Superficie Cuarteada",
+    "Baches": "Baches (m2)",
+    "ProfRodIzq": "Prof. Rodada Izquierda",
+    "ProfRodDer": "Prof. Rodada Derecha",
+    "ProfRodMax": "Prof. Rodada Máxima"
 }
