--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -299,11 +299,11 @@
     "IFP": "IFP",
     "PorcSupFisTot": "% Superfície Fisurada Total",
     "LongFisLongit": "Longitud fissuració longitudinal (m)",
-    "PorcSupFisLongi": "Percentatge Superfície Fissuració Longitudinal",
+    "PorcSupFisLongi": "% Superfície Fissuració Longitudinal",
     "LongFisTrans": "Longitud Fisuración Transversal",
     "PorcSupFisTrans": "% Fissuració Transversal", 
     "AreaOtrasSupFis": "Àrea altres Superfícies de Fissuració (m2)",
-    "PorcOtrasSupFis": "% altres Superfícies de Fissuració (m2)",
+    "PorcOtrasSupFis": "% Altres Superfícies de Fissuració (m2)",
     "AreaSupCuart": "Àrea Superfície Quartejada",
     "PorcSupCuart": "% Superfície Quartejada",
     "Baches": "Sots (m2)",
