--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -298,11 +298,11 @@
     "IFP": "IFP",
     "PorcSupFisTot": "% Superficie Fisurada Total",
     "LongFisLongit": "Longitud fisuración longitudinal (m)",
-    "PorcSupFisLongi": "Porcentaje Superficie Fisuración Longitudinal",
+    "PorcSupFisLongi": "% Superficie Fisuración Longitudinal",
     "LongFisTrans": "Longitud Fisuración Transversal",
     "PorcSupFisTrans": "% Superficie fisuración Transversal", 
     "AreaOtrasSupFis": "Área otras Superficies de Fisuración (m2)",
-    "PorcOtrasSupFis": "% otras Superficies de Fisuración (m2)",
+    "PorcOtrasSupFis": "% Otras Superficies de Fisuración (m2)",
     "AreaSupCuart": "Area Superfície Quartejada",
     "PorcSupCuart": "% Superficie Cuarteada",
     "Baches": "Baches (m2)",
