Errores ausc. y estilo carga ficheros

--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -309,5 +309,18 @@
     "Baches": "Sots (m2)",
     "ProfRodIzq": "Prof. Rodada Esquerra",
     "ProfRodDer": "Prof. Rodada Dreta",
-    "ProfRodMax": "Prof. Rodada Màxima"
+    "ProfRodMax": "Prof. Rodada Màxima",
+    "FechaAuscKO": "Valor o format de data invàlid. La data ha de ser anterior a l'actual.",
+    "NumViaKO": "Error en el número de via. Ha de ser superior a 0.",
+    "NumViasKO": "Error en el nombre de vies. Ha de ser superior a 0 i superior al número de via.",
+    "PKAuscKO": "El Pk és invàlid.",
+    "ComandaKO": "La comanda és invàlida.",
+    "ErroresAus": "S'han trobat errors en el fitxer:",
+    "CoordXKO": "Error en la fila {{FilaKO}}: El valor de la coordenada X ha de ser major de 0.",
+    "CoordYKO": "Error en la fila {{FilaKO}}: El valor de la coordenada Y ha de ser major de 0.",
+    "TipoCalzAuscKO": "Error en la fila {{FilaKO}}: El tipus de calçada és invàlid, ha de ser 'U' o 'D'.",
+    "MarcaViKO": "Error en la fila {{FilaKO}}: La marca viària és invàlida, ha de ser 'BD', 'EIX', BE'.",
+    "CRTKO": "Valor anormal en la fila {{FilaKO}}: El CRT ha de ser major de 30.",
+    "TexturaAusKO": "Valor anormal en la fila {{FilaKO}}: La textura ha de ser major de 0.",
+    "SubirFichero": "Subir Fichero"
 }
