--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -308,5 +308,18 @@
     "Baches": "Baches (m2)",
     "ProfRodIzq": "Prof. Rodada Izquierda",
     "ProfRodDer": "Prof. Rodada Derecha",
-    "ProfRodMax": "Prof. Rodada Máxima"
+    "ProfRodMax": "Prof. Rodada Máxima",
+    "FechaAuscKO": "Valor o formato de fecha inválido. La fecha debe ser anterior a la actual.",
+    "NumViaKO": "Error en el número de vía. Debe ser superior a 0.",
+    "NumViasKO": "Error en el número de vías. Debe ser superior a 0 y superior al número de vía.",
+    "PKAuscKO": "El Pk es inválido.",
+    "ComandaKO": "La comanda es inválida.",
+    "ErroresAus": "Se han encontrado errores en el fichero:",
+    "CoordXKO": "Error en la fila {{FilaKO}}: El valor de la coordenada X debe ser mayor de 0.",
+    "CoordYKO": "Error en la fila {{FilaKO}}: El valor de la coordenada Y debe ser mayor de 0.",
+    "TipoCalzAuscKO": "Error en la fila {{FilaKO}}: El tipo de calzada es inválido, debe ser 'U' o 'D'",
+    "MarcaViKO": "Error en la fila {{FilaKO}}: La marca viaria es inválida, debe ser 'BD', 'EIX', o 'BE'.",
+    "CRTKO": "Valor anormal en la fila {{FilaKO}}: El CRT debe ser mayor de 30.",
+    "TexturaAusKO": "Valor anormal en la fila {{FilaKO}}: La textura debe ser mayor de 0.",
+    "SubirFichero": "Pujar Fitxer"
 }
