--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -264,16 +264,16 @@
     "AnalisAus": "Anàlisi Auscultacions",
     "Linea": "Línia",
     "DistOri": "Distància a Origen",
-    "DeflMaxIntCorr": "Defl. Màx. Int. Corregida",
-    "DeflMaxExtCorr": "Defl. Màx. Ext. Corregida",
+    "DeflMaxIntCorr": "Defl. Màx. Corr. Int.",
+    "DeflMaxExtCorr": "Defl. Màx. Corr. Ext.",
     "Incidencia": "Incidència",
-    "TempPavimento": "Temp. Paviment (ºC)",
-    "RadiCurvMaxInt": "Radio Curv. Màx Eix Int.",
-    "RadiCurvMaxExt": "Radio Curv. Màx Eix Ext.",
-    "DeflMaxEjeInt": "Defl. Màx. No Corr. Eix Int.",  
-    "DeflMaxEjeExt": "Defl. Màx. No Corr. Eix Ext.",
-    "CoefTemp": "Coeficient Temperatura",
-    "CoefHum": "Coeficient Humitat",
+    "TempPavimento": "Temperatura (ºC)",
+    "RadiCurvMaxInt": "Radio Curv. Màx Int.",
+    "RadiCurvMaxExt": "Radio Curv. Màx Ext.",
+    "DeflMaxEjeInt": "Defl. Màx. No Corr. Int.",  
+    "DeflMaxEjeExt": "Defl. Màx. No Corr. Ext.",
+    "CoefTemp": "Coef. Temperatura",
+    "CoefHum": "Coef. Humitat",
     "CoordX": "Coord. UTM: X",
     "CoordY": "Coord. UTM: Y",
     "NombrTram": "Nom del Tram",
@@ -322,5 +322,7 @@
     "MarcaViKO": "Error en la fila {{FilaKO}}: La marca viària és invàlida, ha de ser 'BD', 'EIX', BE'.",
     "CRTKO": "Valor anormal en la fila {{FilaKO}}: El CRT ha de ser major de 30.",
     "TexturaAusKO": "Valor anormal en la fila {{FilaKO}}: La textura ha de ser major de 0.",
-    "SubirFichero": "Subir Fichero"
+    "SubirFichero": "Pujar Fitxer",
+    "ErrorAnalizAusc": "S'ha produït un error en analitzar l'auscultació.",
+    "TipoAuscKO": "El tipus d'arxiu és invàlid."
 }
