--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -263,16 +263,16 @@
     "AnalisAus": "Análisis Auscultaciones",
     "Linea": "Línea",
     "DistOri": "Distancia a Origen",
-    "DeflMaxIntCorr": "Defl. Máx. Interior Corregida",
-    "DeflMaxExtCorr": "Defl. Máx. Exterior Corregida",
+    "DeflMaxIntCorr": "Defl. Máx. Corr. Int.",
+    "DeflMaxExtCorr": "Defl. Máx. ECorr. Ext.",
     "Incidencia": "Incidencia",
-    "TempPavimento": "Temp. Pavimento (ºC)",
-    "RadiCurvMaxInt": "Radio Curv. Máx Eje Int.",
-    "RadiCurvMaxExt": "Radio Curv. Máx Eje Ext.",
-    "DeflMaxEjeInt": "Defl. Máx. No Corr. Eje Int.",  
-    "DeflMaxEjeExt": "Defl. Máx. No Corr. Eje Ext.",
-    "CoefTemp": "Coeficiente Temperatura",
-    "CoefHum": "Coeficiente Humedad",
+    "TempPavimento": "Temperatura (ºC)",
+    "RadiCurvMaxInt": "Radio Curv. Máx Int.",
+    "RadiCurvMaxExt": "Radio Curv. Máx Ext.",
+    "DeflMaxEjeInt": "Defl. Máx. No Corr. Int.",  
+    "DeflMaxEjeExt": "Defl. Máx. No Corr. Ext.",
+    "CoefTemp": "Coef. Temp.",
+    "CoefHum": "Coef. Humedad",
     "CoordX": "Coord. UTM: X",
     "CoordY": "Coord. UTM: Y",
     "NombrTram": "Nombre Tramo",
@@ -321,5 +321,7 @@
     "MarcaViKO": "Error en la fila {{FilaKO}}: La marca viaria es inválida, debe ser 'BD', 'EIX', o 'BE'.",
     "CRTKO": "Valor anormal en la fila {{FilaKO}}: El CRT debe ser mayor de 30.",
     "TexturaAusKO": "Valor anormal en la fila {{FilaKO}}: La textura debe ser mayor de 0.",
-    "SubirFichero": "Pujar Fitxer"
+    "SubirFichero": "Subir Fichero",
+    "ErrorAnalizAusc": "Se ha producido un error al analizar la auscultación.",
+    "TipoAuscKO": "El tipo de archivo es inválido."
 }
