--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -263,7 +263,7 @@
     "VALIDATEKO": "Si us plau, omple tots els camps correctament",
     "AnalisAus": "Anàlisi Auscultacions",
     "Linea": "Línia",
-    "DistOri": "Distància a Origen",
+    "DistOri": "Dist. a Origen",
     "DeflMaxIntCorr": "Defl. Màx. Corr. Int.",
     "DeflMaxExtCorr": "Defl. Màx. Corr. Ext.",
     "Incidencia": "Incidència",
@@ -298,18 +298,18 @@
     "IFT": "IFT",
     "IFP": "IFP",
     "PorcSupFisTot": "% Superfície Fisurada Total",
-    "LongFisLongit": "Longitud fissuració longitudinal (m)",
+    "LongFisLongit": "Longitud Fissuració Longitudinal (m)",
     "PorcSupFisLongi": "% Superfície Fissuració Longitudinal",
-    "LongFisTrans": "Longitud Fisuración Transversal",
-    "PorcSupFisTrans": "% Fissuració Transversal", 
-    "AreaOtrasSupFis": "Àrea altres Superfícies de Fissuració (m2)",
+    "LongFisTrans": "Longitud Fissuració Transversal (m)",
+    "PorcSupFisTrans": "% Superfície Fissuració Transversal", 
+    "AreaOtrasSupFis": "Àrea Altres Superfícies de Fissuració (m2)",
     "PorcOtrasSupFis": "% Altres Superfícies de Fissuració (m2)",
-    "AreaSupCuart": "Àrea Superfície Quartejada",
+    "AreaSupCuart": "Àrea Superfície Quartejada (m2)",
     "PorcSupCuart": "% Superfície Quartejada",
     "Baches": "Sots (m2)",
-    "ProfRodIzq": "Prof. Rodada Esquerra",
+    "ProfRodIzq": "Prof. Rodada Esq.",
     "ProfRodDer": "Prof. Rodada Dreta",
-    "ProfRodMax": "Prof. Rodada Màxima",
+    "ProfRodMax": "Prof. Rodada Màx.",
     "FechaAuscKO": "Valor o format de data invàlid. La data ha de ser anterior a l'actual.",
     "NumViaKO": "Error en el número de via. Ha de ser superior a 0.",
     "NumViasKO": "Error en el nombre de vies. Ha de ser superior a 0 i superior al número de via.",
