--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -262,7 +262,7 @@
     "VALIDATEKO": "Por favor, rellena todos los campos correctamente",
     "AnalisAus": "Análisis Auscultaciones",
     "Linea": "Línea",
-    "DistOri": "Distancia a Origen",
+    "DistOri": "Dist. a Origen",
     "DeflMaxIntCorr": "Defl. Máx. Corr. Int.",
     "DeflMaxExtCorr": "Defl. Máx. ECorr. Ext.",
     "Incidencia": "Incidencia",
@@ -297,18 +297,18 @@
     "IFT": "IFT",
     "IFP": "IFP",
     "PorcSupFisTot": "% Superficie Fisurada Total",
-    "LongFisLongit": "Longitud fisuración longitudinal (m)",
+    "LongFisLongit": "Longitud Fisuración Longitudinal (m)",
     "PorcSupFisLongi": "% Superficie Fisuración Longitudinal",
-    "LongFisTrans": "Longitud Fisuración Transversal",
-    "PorcSupFisTrans": "% Superficie fisuración Transversal", 
-    "AreaOtrasSupFis": "Área otras Superficies de Fisuración (m2)",
+    "LongFisTrans": "Longitud Fisuración Transversal (m)",
+    "PorcSupFisTrans": "% Superficie Fisuración Transversal", 
+    "AreaOtrasSupFis": "Área Otras Superficies de Fisuración (m2)",
     "PorcOtrasSupFis": "% Otras Superficies de Fisuración (m2)",
-    "AreaSupCuart": "Area Superfície Quartejada",
+    "AreaSupCuart": "Area Superfície Quartejada (m2)",
     "PorcSupCuart": "% Superficie Cuarteada",
     "Baches": "Baches (m2)",
-    "ProfRodIzq": "Prof. Rodada Izquierda",
-    "ProfRodDer": "Prof. Rodada Derecha",
-    "ProfRodMax": "Prof. Rodada Máxima",
+    "ProfRodIzq": "Prof. Rodada Izq.",
+    "ProfRodDer": "Prof. Rodada Dcha.",
+    "ProfRodMax": "Prof. Rodada Máx.",
     "FechaAuscKO": "Valor o formato de fecha inválido. La fecha debe ser anterior a la actual.",
     "NumViaKO": "Error en el número de vía. Debe ser superior a 0.",
     "NumViasKO": "Error en el número de vías. Debe ser superior a 0 y superior al número de vía.",
