--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -284,5 +284,14 @@
     "PKInicial": "Pk Inicial",
     "Analizar": "Analitzar",
     "DATAKO": "Data d'alta invàlida",
-    "impGrafo": "Importar Graf/Trams"
+    "impGrafo": "Importar Graf/Trams",
+    "mensaje": "Missatge",
+    "info": "Informació",
+    "error1": "error 1",
+    "error2": "error 2",
+    "error3": "error 3",
+    "error4": "error 4",
+    "error5": "error 5",
+    "error6": "error 6",
+    "MensajeSistema": "Missatges del Sistema"
 }
