--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -283,5 +283,14 @@
     "PKInicial": "Pk Inicial",
     "Analizar": "Analizar",
     "DATAKO": "Fecha de alta inválida",
-    "impGrafo": "Importar Grafo/Tramos"
+    "impGrafo": "Importar Grafo/Tramos",
+    "mensaje": "Mensaje",
+    "info": "Información",
+    "error1": "error 1",
+    "error2": "error 2",
+    "error3": "error 3",
+    "error4": "error 4",
+    "error5": "error 5",
+    "error6": "error 6",
+    "MensajeSistema": "Mensajes del Sistema"
 }
