--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -285,7 +285,6 @@
     "Analizar": "Analitzar",
     "DATAKO": "Data d'alta invàlida",
     "impGrafo": "Importar Graf/Trams",
-<<<<<<< HEAD
     "mensaje": "Missatge",
     "info": "Informació",
     "error1": "error 1",
@@ -294,8 +293,7 @@
     "error4": "error 4",
     "error5": "error 5",
     "error6": "error 6",
-    "MensajeSistema": "Missatges del Sistema"
-=======
+    "MensajeSistema": "Missatges del Sistema",
     "RodadaDer": "IRI Rodada Dreta",
     "RodadaIzq": "IRI Rodada Esquerra",
     "Incidencias": "Incidències",
@@ -335,6 +333,11 @@
     "TexturaAusKO": "Valor anormal en la fila {{FilaKO}}: La textura ha de ser major de 0.",
     "SubirFichero": "Pujar Fitxer",
     "ErrorAnalizAusc": "S'ha produït un error en analitzar l'auscultació.",
-    "TipoAuscKO": "El tipus d'arxiu és invàlid."
->>>>>>> cf5bfdd0f48b33025c0fa4b42ed2983b2b468400
+    "TipoAuscKO": "El tipus d'arxiu és invàlid.",
+    "Actualizar": "Actualizar",
+    "accion": "Act/Afegir El Tram",
+    "origen": "Origen",
+    "PKFinal": "Pk Final",
+    "NumCarrilsCrec": "Número Carrils Creixent",
+    "NumCarrilsDeCrec": "Número Carrils Decreixent"
 }
