--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -284,7 +284,6 @@
     "Analizar": "Analizar",
     "DATAKO": "Fecha de alta inválida",
     "impGrafo": "Importar Grafo/Tramos",
-<<<<<<< HEAD
     "mensaje": "Mensaje",
     "info": "Información",
     "error1": "error 1",
@@ -293,8 +292,7 @@
     "error4": "error 4",
     "error5": "error 5",
     "error6": "error 6",
-    "MensajeSistema": "Mensajes del Sistema"
-=======
+    "MensajeSistema": "Mensajes del Sistema",
     "RodadaDer": "IRI Rodada Derecha",
     "RodadaIzq": "IRI Rodada Izquierda",
     "Incidencias": "Incidencias",
@@ -334,6 +332,11 @@
     "TexturaAusKO": "Valor anormal en la fila {{FilaKO}}: La textura debe ser mayor de 0.",
     "SubirFichero": "Subir Fichero",
     "ErrorAnalizAusc": "Se ha producido un error al analizar la auscultación.",
-    "TipoAuscKO": "El tipo de archivo es inválido."
->>>>>>> cf5bfdd0f48b33025c0fa4b42ed2983b2b468400
+    "TipoAuscKO": "El tipo de archivo es inválido.",
+    "Actualizar": "Actualizar",
+    "accion": "Act/Añadir El Tramo",
+    "origen": "Origen",
+    "PKFinal": "Pk Final",
+    "NumCarrilsCrec": "Número Carriles Creciente",
+    "NumCarrilsDeCrec": "Número Carriles Decreciente"
 }
