--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -339,5 +339,8 @@
     "origen": "Origen",
     "PKFinal": "Pk Final",
     "NumCarrilsCrec": "Número Carrils Creixent",
-    "NumCarrilsDeCrec": "Número Carrils Decreixent"
+    "NumCarrilsDeCrec": "Número Carrils Decreixent",
+    "AdaptarCarriles": "Adaptar Carrils",
+    "Sobreescribir": "Sobreescriure",
+    "BuscarInicio": "Buscar Inici"
 }
