--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -338,5 +338,8 @@
     "origen": "Origen",
     "PKFinal": "Pk Final",
     "NumCarrilsCrec": "Número Carriles Creciente",
-    "NumCarrilsDeCrec": "Número Carriles Decreciente"
+    "NumCarrilsDeCrec": "Número Carriles Decreciente",
+    "AdaptarCarriles": "Adaptar Carriles",
+    "Sobreescribir": "Sobreescribir",
+    "BuscarInicio": "Buscar Inicio"
 }
