--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -341,5 +341,16 @@
     "NumCarrilsDeCrec": "Número Carriles Decreciente",
     "AdaptarCarriles": "Adaptar Carriles",
     "Sobreescribir": "Sobreescribir",
-    "BuscarInicio": "Buscar Inicio"
+    "BuscarInicio": "Buscar Inicio",
+    "AuscCargada": "Auscultación importada para la carretera {{NomCarr}} PK {{PkIni}} + {{MIni}} -> {{PkFin}} + {{MFin}}; Subtramo: {{NomTramo}}; Tipo Calzada {{TipoCalz}}; Carril {{Carril}}. Metros importados: {{MetrosImp}}; Datos Importados: {{DatosImp}}",
+    "DatosSinImp": "Datos descartados por no cubrir la suficiente longitud para importar {{DtsSinImp}}",
+    "AuscultacionExiste": "Ya existe una auscultación en la base de datos con el mismo nombre. No se ha importado la auscultación.",
+    "NoCarretera": "No existe la carretera en la base de datos.",
+    "SinDatosProxTram": "Los datos del archivo no alcanzan ningún tramo de la base de datos.",
+    "RevisarTramo": "Inicio de archivo externo a cualquier tramo de la base de datos. Error al identificar el carril de otro tramo. Revisar el archivo para solucionar el problema.",
+    "CarrilAusSinTramo": "Error al buscar el carril de la auscultación. El comienzo de los datos del archivo de auscultación no está contenido en ningún tramo.",
+    "SinCarriles": "No existen carriles en la base de datos para el tramo en el que se encuentra la auscultación.",
+    "Adaptar Carriles": "La información del número de carriles del archivo y del tramo no coincide. Se adaptará la información de {{carriles}} (Archivo auscultación) a {{carillesAux}} (Información Tramo).",
+    "CarrilesDifBBDD": "No coinciden el número de carriles en el archivo y en la base de datos.",
+    "BuscarCarrAus": "Error al buscar el carril de la auscultación."
 }
