--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -343,7 +343,7 @@
     "AdaptarCarriles": "Adaptar Carrils",
     "Sobreescribir": "Sobreescriure",
     "BuscarInicio": "Buscar Inici",
-    "AuscCargada": "Auscultació importada per a la carretera {{NomCarr}} PK {{PkIni}} + {{MIni}} -> {{PkFin}} + {{MFin}}; Subtram: {{NomTramo}}; Tipus Calçada {{TipoCalz}}; Carril {{Carril}}. Metres Importants: {{MetrosImp}}; Dades Importats: {{DatosImp}}",
+    "AuscCargada": "Auscultació importada per a la carretera {{NomCarr}} PK {{PkIni}} + {{MIni}} -> {{PkFin}} + {{MFin}}; Subtram: {{NomTramo}}; Tipus Calçada: {{TipoCalz}}; Carril: {{Carril}}. Metres Importants: {{MetrosImp}}; Dades Importats: {{DatosImp}}",
     "DatosSinImp": "Dades descartades per no cobrir la suficient longitud per a importar: {{DtsSinImp}}",
     "AuscultacionExiste": "Ja existeix una auscultació a la base de dades amb el mateix nom. No s'ha importat la auscultació.",
     "NoCarretera": "Auscultació per a {{PkIni}} + {{MIni}}: No existeix la carretera a la base de dades.",
@@ -351,7 +351,7 @@
     "RevisarTramo": "Auscultació per a {{PkIni}} + {{MIni}}: Inici de fitxer fora de qualsevol tram de la base de dades. Error al identificar el carril d'un altre tram. Revisar el fitxer per a solucionar el problema.",
     "CarrilAusSinTramo": "Auscultació per a {{PkIni}} + {{MIni}}: Error al cercar el carril de la auscultació. L'inici de les dades del fitxer d'auscultació no està contingut a cap tram.",
     "SinCarriles": "Auscultació per a {{PkIni}} + {{MIni}}: No existeixen carrils a la base de dades per al tram al qual es troba la auscultació.",
-    "AdaptarCarrilesAus": "Auscultació per a {{PkIni}} + {{MIni}}: La informació del nombre de carrils del fitxer i del tram no coincideix. S'adaptará la informació de {{carriles}} (Fitxer d'auscultació) a {{carillesAux}} (Informació tram).",
+    "AdaptarCarrilesAus": "Auscultació per a {{PkIni}} + {{MIni}}: La informació del nombre de carrils del fitxer i del tram no coincideix. S'adaptará la informació de {{carriles}} (Fitxer d'auscultació) a {{carrilesAux}} (Informació tram).",
     "CarrilesDifBBDD": "Auscultació per a {{PkIni}} + {{MIni}}: No coincideixen el número de carrils a l'arxiu i a la base de dades.",
     "BuscarCarrAus": "Auscultació per a {{PkIni}} + {{MIni}}: Error al cercar el carril de la auscultació.",
     "AuscNombFechaExiste": "Auscultació per a {{PkIni}} + {{MIni}}: Ja hi ha una auscultació al sistema per aquesta carretera, carril i tram en aquesta data. Per continuar ignorant aquest error activi la funcio de sobreescriure.",
@@ -359,5 +359,7 @@
     "ImpAusKO": "Auscultació per a {{PkIni}} + {{MIni}}: Error al afegir les dades a la base de dades.",
     "ImpCargarSinDatos": "Auscultació per a {{PkIni}} + {{MIni}}: No hi ha dades a l'amidament per al següent tram. Es necessiten almenys dues dades per importar.",
     "Recursividad": "Auscultació per a {{PkIni}} + {{MIni}}: Error de recursivitat.",
-    "DatosDescartados": "{{NumDatosDesc}} dades descartades al no trobar tram a {{PkIniAux}} + {{MIniAuxAux}}"
+    "DatosDescartados": "{{NumDatosDesc}} dades descartades al no trobar tram a {{PkIniAux}} + {{MIniAuxAux}}",
+    "ErrAusc": "Auscultació per a {{PkIni}} + {{MIni}}: Error al cargar la auscultación.",
+    "ErrCargaAusc": "S'ha produït un error en carregar el fitxer."
 }
