Auscultaciones (listar ficheros)

--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -361,5 +361,11 @@
     "Recursividad": "Auscultació per a {{PkIni}} + {{MIni}}: Error de recursivitat.",
     "DatosDescartados": "{{NumDatosDesc}} dades descartades al no trobar tram a {{PkIniAux}} + {{MIniAuxAux}}",
     "ErrAusc": "Auscultació per a {{PkIni}} + {{MIni}}: Error al cargar la auscultación.",
-    "ErrCargaAusc": "S'ha produït un error en carregar el fitxer."
+    "ErrCargaAusc": "S'ha produït un error en carregar el fitxer.",
+    "FicherosAusc": "Fitxers Auscultacions",
+    "ListarFich": "Llistar Fitxers",
+    "ErrFechas": "Es obligatorio seleccionar una fecha inicial y final.",
+    "SinFicheros": "No hi ha fitxers per a l'interval de dates seleccionat.",
+    "DescargarExcel": "Descargar Excel",
+    "ArchivoGuardado": "Archivo guardado en: {{Ruta}}"
 }
