--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -360,5 +360,11 @@
     "Recursividad": "Auscultación para {{PkIni}} + {{MIni}}: Error de recursividad.",
     "DatosDescartados": "{{NumDatosDesc}} datos descartados al no encontrar tramo en {{PkIniAux}} + {{MIniAux}}",
     "ErrAusc": "Auscultación para {{PkIni}} + {{MIni}}: Error al cargar la auscultación.",
-    "ErrCargaAusc": "Se ha producido un error al cargar el fichero."
+    "ErrCargaAusc": "Se ha producido un error al cargar el fichero.",
+    "FicherosAusc": "Ficheros Auscultaciones",
+    "ListarFich": "Listar Ficheros",
+    "ErrFechas": "És obligatori seleccionar una data inicial i final.",
+    "SinFicheros": "No hay ficheros para el intervalo de fechas seleccionado.",
+    "DescargarExcel": "Descarregar Excel",
+    "ArchivoGuardado": "Arxiu desat en: {{Ruta}}"
 }
