--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -367,5 +367,7 @@
     "ErrFechas": "Es obligatorio seleccionar una fecha inicial y final.",
     "SinFicheros": "No hi ha fitxers per a l'interval de dates seleccionat.",
     "DescargarExcel": "Descargar Excel",
-    "ArchivoGuardado": "Archivo guardado en: {{Ruta}}"
+    "ArchivoGuardado": "Archivo guardado en: {{Ruta}}",
+    "SobreescrGuardar": "Amb aquesta acció importarà dades d'una o diverses auscultacions. La importació d'aquesta informació eliminarà les auscultacions prèvies amb el mateix nom. Està segur que desitja continuar?",
+    "CercarCarril": "Error al cercar el carril de auscultació."
 }
