--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -366,5 +366,7 @@
     "ErrFechas": "És obligatori seleccionar una data inicial i final.",
     "SinFicheros": "No hay ficheros para el intervalo de fechas seleccionado.",
     "DescargarExcel": "Descarregar Excel",
-    "ArchivoGuardado": "Arxiu desat en: {{Ruta}}"
+    "ArchivoGuardado": "Arxiu desat en: {{Ruta}}",
+    "SobreescrGuardar": "Con esta acción va a importar datos de una o varias auscultaciones. La importación de dicha información eliminará las auscultaciones previas con el mismo nombre. ¿Está seguro de que desea continuar?",
+    "CercarCarril": "Error al cercar el carril de auscultación."
 }
