--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -359,7 +359,7 @@
     "ImpAusKO": "Auscultació per a {{PkIni}} + {{MIni}}: Error al afegir les dades a la base de dades.",
     "ImpCargarSinDatos": "Auscultació per a {{PkIni}} + {{MIni}}: No hi ha dades a l'amidament per al següent tram. Es necessiten almenys dues dades per importar.",
     "Recursividad": "Auscultació per a {{PkIni}} + {{MIni}}: Error de recursivitat.",
-    "DatosDescartados": "{{NumDatosDesc}} dades descartades al no trobar tram a {{PkIniAux}} + {{MIniAuxAux}}",
+    "DatosDescartados": "{{NumDatosDesc}} dades descartades al no trobar tram a Pk {{PkIniAux}} + {{MIniAux}}",
     "ErrAusc": "Auscultació per a {{PkIni}} + {{MIni}}: Error al cargar la auscultación.",
     "ErrCargaAusc": "S'ha produït un error en carregar el fitxer.",
     "FicherosAusc": "Fitxers Auscultacions",
