--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -358,7 +358,7 @@
     "ImpAusKO": "Auscultación para {{PkIni}} + {{MIni}}: Fallo al añadir los datos a la base de datos.",
     "ImpCargarSinDatos": "Auscultación para {{PkIni}} + {{MIni}}: No hay datos en la medición para el siguiente tramo. Se necesitan al menos dos datos para importar.",
     "Recursividad": "Auscultación para {{PkIni}} + {{MIni}}: Error de recursividad.",
-    "DatosDescartados": "{{NumDatosDesc}} datos descartados al no encontrar tramo en {{PkIniAux}} + {{MIniAux}}",
+    "DatosDescartados": "{{NumDatosDesc}} datos descartados al no encontrar tramo en Pk {{PkIniAux}} + {{MIniAux}}",
     "ErrAusc": "Auscultación para {{PkIni}} + {{MIni}}: Error al cargar la auscultación.",
     "ErrCargaAusc": "Se ha producido un error al cargar el fichero.",
     "FicherosAusc": "Ficheros Auscultaciones",
