--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -302,7 +302,7 @@
     "MarcaViaria": "Marca Viària",
     "ContrasteDia": "Contrasti Dia",
     "ContrasteNoche": "Contrasti Nit",
-    "Retroflexion": "Retroflexión",
+    "Retroflexion": "Retroflexió",
     "PCI": "PCI",
     "IFT": "IFT",
     "IFP": "IFP",
